# utility_scripts

./: .gitignore  LICENSE  README.md  ad2cp_file_move.py  ad2cp_nc_clean.py  ad2cp_proc.py  all_complete_to_erddap.py  all_nrt_from_complete.py  check-pipeline.py  check_pipeline.py  clean_mission.sh  complete_to_nrt.sh  convert_to_og1.py  ctd.py  env.yml  env_sound.yml  erddap_checks.py  fix_adcp_times.py  fix_bad_payload.py  geocode.py  glider_list.sh  make_og1.py  metocc.py  mission_list.sh  mission_stats.py  new_complete_missions.py  office_check_glider_files.py  office_sync_to_aws.py  post_process_ctd.py  post_process_dataset.py  proc_single_mission.sh  process_pyglider.py  pyglider_all_complete_missions.py  pyglider_all_nrt.py  pyglider_nrt.py  pyglider_nrt_from_complete.py  pyglider_single_mission.py  pyproject.toml  recombine.py  requirements-prod.txt  (+16 more)
pipeline/: all_complete_to_erddap.py  all_ctd.py  office_sync_to_pipeline.py  proc_single_mission.sh  pyglider_nrt.py  pyglider_single_mission.py  retry.py
sailbuoy/: sailbuoy_raw_to_nc.py
votoutils/ad2cp/: ad2cp_file_move.py  ad2cp_nc_clean.py  ad2cp_proc.py
votoutils/alerts/: alert.sh
votoutils/ctd/: ctd.py
votoutils/fixers/: file_operations.py  fix_adcp_times.py  update_meta.py  update_meta.sh
votoutils/glider/: convert_to_og1.py  fix_chla.py  make_og1.py  post_process_ctd.py  post_process_dataset.py  post_process_optics.py  process_pyglider.py
votoutils/monitor/: check_pipeline.py  erddap_checks.py  mission_stats.py  office_check_glider_files.py  summary_proc_time.py
votoutils/pipeline/: metocc.py  (+6 more)
(+10 files in other folders)
