[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm",
  "wheel",
]

[project]
name = "votoutils"
description = "Utility scripts for VOTO processing"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Callum Rollo", email = "c.rollo@outlook.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "version",
]
urls.documentation = "https://github.com/voto-ocean-knowledge/votoutils"
urls.homepage = "https://github.com/voto-ocean-knowledge/votoutils"
urls.repository = "https://github.com/voto-ocean-knowledge/votoutils"

[tool.setuptools]
packages = [
  "votoutils",
]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }

[tool.setuptools_scm]
write_to = "votoutils/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.check-manifest]
ignore = [
  "*.yml",
  ".coveragerc",
  "Makefile",
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
  "pipeline",
  "pipeline/*"
]
